<resources>
    <string name="app_name">Binfo</string>
    <string name="nombre_de_usuario">nombre de usuario</string>
    <string name="contrase_a">contraseña</string>
    <string name="button_Text">LOGIN</string>
    <string name="no_tienes_cuenta">" ¿No tienes cuenta?, "</string>
    <string name="crear_una_aqui">Crear una aqui</string>
    <string name="correo">correo</string>
    <string name="nombre">Nombre</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="confirme_contraseña">Confirme Contraseña</string>
    <string name="button_Text_Create_acconut">UNETE</string>
    <string name="title_crear_cuenta">crear cuenta</string>
    <string name="cristian_soto_cardview">cristian soto</string>
    <string name="hace_cardview">hace</string>
    <string name="dias_cardview">" 4 dias "</string>
    <string name="me_gusta_cardview">10 me gusta</string>
    <string name="buscar_item">buscar</string>
    <string name="home_item">home</string>
    <string name="yo_item">yo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>